--- a/index.html
+++ b/index.html
@@ -9,21 +9,27 @@
       font-family: "Myriad Pro";
       src: url('./assets/fonts/myriadpro.OTF');
     }
+
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
+
     body {
-      font-family: "Myriad Pro";
+      font-family: "Myriad Pro", sans-serif;
       overflow: hidden;
+      background: black;
     }
+
     #container {
       width: 100vw;
       height: 100vh;
       position: relative;
     }
-    #time, #amOrPm {
+
+    #time,
+    #amOrPm {
       color: #fff;
       position: fixed;
       font-weight: bold;
@@ -31,63 +37,50 @@
       line-height: 1;
       transform-origin: left bottom;
     }
+
     @keyframes fadeInOut {
       0% { opacity: 0; }
       20% { opacity: 1; }
       70% { opacity: 1; }
       100% { opacity: 0; }
     }
+
     .fade-anim {
       animation: fadeInOut 3.5s forwards;
     }
+
     #video {
       width: 100%;
       height: 100%;
       object-fit: fill;
     }
-    /* 600x810 (Portrait Display) */
-    .size-600x810 #time {
-      bottom: 12.35%;
-      left: 12.5%;
-      font-size: 18.5vh;
+
+    /* 📱 Base layout for 768px width */
+    #time {
+      top: 28vh;
+      left: 4vw;
+      font-size: 40vh;
     }
-    .size-600x810 #amOrPm {
-      bottom: 18.5%;
-      left: 72%;
-      font-size: 11.1vh;
-    }
-    /* 768x320 - using viewport units */
-    .size-768x320 #time {
-      top: 28.125vh;
-      left: 3.9vw;
-      font-size: 40.625vh;
-    }
-    .size-768x320 #amOrPm {
+
+    #amOrPm {
       top: 37.5vh;
       left: 45%;
-      font-size: 20.3vh;
+      font-size: 20vh;
     }
-    /* 1920x768 - using viewport units */
-    .size-1920x768 #time {
-      top: 26.04vh;
-      left: 4.69vw;
-      font-size: 39.06vh;
-    }
-    .size-1920x768 #amOrPm {
-      top: 36.46vh;
-      left: 42.5%;
-      font-size: 19.53vh;
-    }
-    /* 1920x960 - using viewport units */
-    .size-1920x960 #time {
-      top: 35.42vh;
-      left: 5.21vw;
-      font-size: 35.42vh;
-    }
-    .size-1920x960 #amOrPm {
-      top: 43.75vh;
-      left: 47%;
-      font-size: 16.67vh;
+
+    /* 🔁 Responsive adjustments between 768px and 860px width */
+    @media (min-width: 769px) and (max-width: 860px) {
+      #time {
+        top: 27vh;
+        left: 5vw;
+        font-size: calc(40vh - 4vh);
+      }
+
+      #amOrPm {
+        top: 36vh;
+        left: 47%;
+        font-size: calc(20vh - 2vh);
+      }
     }
   </style>
 </head>
@@ -96,79 +89,40 @@
     <span id="time"></span>
     <span id="amOrPm"></span>
     <video id="video" autoplay muted loop playsinline preload="auto">
-      <source id="source" src="./assets/videos/768x320.mp4" type="video/mp4">
+      <source src="./assets/videos/768x320.mp4" type="video/mp4">
       Tu navegador no soporta video HTML5.
     </video>
   </div>
 
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const urlParams = new URLSearchParams(window.location.search);
-    const targetWidth = parseInt(urlParams.get('width')) || window.innerWidth;
-    const targetHeight = parseInt(urlParams.get('height')) || window.innerHeight;
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const timeEl = document.getElementById('time');
+      const amOrPmEl = document.getElementById('amOrPm');
+      const videoEl = document.getElementById('video');
 
-    const timeEl = document.getElementById('time');
-    const amOrPmEl = document.getElementById('amOrPm');
-    const videoEl = document.getElementById('video');
-    const sourceEl = document.getElementById('source');
+      // 🕒 Format current time
+      const now = new Date();
+      const formattedTime = new Intl.DateTimeFormat('en-US', {
+        timeZone: 'America/Guayaquil',
+        hour: '2-digit',
+        minute: '2-digit',
+        hour12: true,
+      }).format(now);
 
-    // 🕒 Format current time
-    const now = new Date();
-    const formattedTime = new Intl.DateTimeFormat('en-US', {
-      timeZone: 'America/Guayaquil',
-      hour: '2-digit',
-      minute: '2-digit',
-      hour12: true,
-    }).format(now);
-    const [timePart, amOrPmPart] = formattedTime.split(' ');
-    timeEl.innerText = timePart;
-    amOrPmEl.innerText = amOrPmPart;
+      const [timePart, amOrPmPart] = formattedTime.split(' ');
+      timeEl.innerText = timePart;
+      amOrPmEl.innerText = amOrPmPart;
 
-    // 🎬 Determine correct video & size class
-    let newSrc = '';
-    let sizeClass = '';
+      // 🎬 Wait until video starts playing
+      videoEl.addEventListener('playing', () => {
+        setTimeout(() => {
+          timeEl.classList.add('fade-anim');
+          amOrPmEl.classList.add('fade-anim');
+        }, 3000);
+      });
 
-    if (targetWidth <= 600) {
-      newSrc = './assets/videos/600x810.mp4';
-      sizeClass = 'size-600x810';
-    } else if (targetWidth <= 768) {
-      newSrc = './assets/videos/768x320.mp4';
-      sizeClass = 'size-768x320';
-    } else if (targetWidth <= 1919) {
-      newSrc = './assets/videos/1920x768.mp4';
-      sizeClass = 'size-1920x768';
-    } else {
-      if (targetHeight > 900) {
-        newSrc = './assets/videos/1920x960.mp4';
-        sizeClass = 'size-1920x960';
-      } else {
-        newSrc = './assets/videos/1920x768.mp4';
-        sizeClass = 'size-1920x768';
-      }
-    }
-
-    document.body.className = sizeClass;
-
-    // 🧠 Replace video source only if different
-    if (sourceEl.src !== newSrc) {
-      videoEl.pause();
-      sourceEl.src = newSrc;
-      videoEl.load();
-    }
-
-    // 🛡️ Wait until video *actually starts playing*
-    videoEl.addEventListener('playing', () => {
-      console.log('✅ Video started, triggering animations...');
-      // Delay the appearance (e.g. 3s after playback starts)
-      setTimeout(() => {
-        timeEl.classList.add('fade-anim');
-        amOrPmEl.classList.add('fade-anim');
-      }, 3000);
+      videoEl.play().catch(err => console.warn('Autoplay issue:', err));
     });
-
-    videoEl.play().catch(err => console.warn('Autoplay issue:', err));
-  });
-</script>
-
+  </script>
 </body>
 </html>
