--- a/herbalife-ec.html
+++ b/herbalife-ec.html
@@ -28,7 +28,7 @@
 <body>
     <!-- Update these width/height values to match your billboard screen -->
     <iframe id="content-iframe"
-            src="https://ernxyz.github.io/herbalife/?width=1920&height=768"
+            src="https://ernxyz-alac.github.io/ECUADOR-herbalife/?width=1920&height=768"
             width="100%"
             frameborder="0"></iframe>
 
