--- a/index.html
+++ b/index.html
@@ -68,8 +68,21 @@
       font-size: 20vh;
     }
 
-    /* 🔁 Responsive adjustments between 768px and 860px width */
-    @media (min-width: 769px) and (max-width: 860px) {
+    @media (min-width: 821px) {
+      #time {
+        top: 28vh;
+        left: 4vw;
+        font-size: 38vh;
+      }
+
+      #amOrPm {
+        top: 37.5vh;
+        left: 46%;
+        font-size: 20vh;
+      }
+    }
+    /* 🔁 Responsive adjustments between 768px and 820px width */
+    @media (min-width: 769px) and (max-width: 820px) {
       #time {
         top: 27vh;
         left: 5vw;
